# torch-game

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TORCH_Game_Design_Document1.md  TORCH_Unified_Design_Document2.md  capacitor.config.ts  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/: data.ts  main.ts  orreryView.ts  style.css
crates/torch-core/: Cargo.toml
crates/torch-core/data/: commodities.json  ships.json
crates/torch-core/src/: lib.rs
crates/torch-core/src/sim/: ai.rs  alerts.rs  ambient.rs  automation.rs  bridgehead.rs  campaign.rs  combat.rs  commodity.rs  contest.rs  contracts.rs  corp.rs  decisions.rs  diplomacy.rs  economy.rs  event.rs  facility.rs  faction.rs  fixed.rs  frontier.rs  industry.rs  interdiction.rs  logistics.rs  missions.rs  mod.rs  movement.rs  orbit.rs  persist.rs  player.rs  pressure.rs  progression.rs  rng.rs  salvage.rs  ship.rs  ships.rs  traffic.rs  weapons.rs  world.rs
crates/torch-core/src/sim/world/: automation.rs  defence.rs  empire.rs  endgame.rs  fleet.rs  industry.rs  mining.rs  mod.rs  outposts.rs  persist.rs  shipyard.rs  tests.rs  tick.rs  trade.rs
crates/torch-qa/: Cargo.toml  README.md
crates/torch-qa/src/: early.rs  engagement.rs  harness.rs  lib.rs  main.rs  review.rs  strategy.rs  ui.rs
data/: bodies.json  commodities.json  markets.json  recipes.json
docs/: ART_TRACK_PLAN.md  EMPIRE_DIPLOMACY_PLAN.md  EMPIRE_LAYER_PLAN.md  EMPIRE_PHASE2_PLAN.md  GDD_DEVIATION_REVIEW.md  MID_LATE_GAME_STORY.md  (+5 more)
(+125 files in other folders)
