[package]
name = "torch-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# cdylib -> the Godot GDExtension; rlib -> native `cargo test` of the pure sim.
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = "0.2"
# Numbers-as-data (§31): commodity tuning is loaded from JSON. serde/serde_json
# are already in the locked tree (transitive via gdext), so this adds no fetch.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Binary save format (§30): the shipping save is bincode; JSON stays the dev export.
bincode = "1.3"
