[package]
name = "torch-qa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# A native binary that *plays* the deterministic core and writes a gameplay
# review. It depends on the `rlib` side of torch-core (same as `cargo test`),
# so it never needs a Godot runtime.

[dependencies]
torch-core = { path = "../torch-core" }
